# raydium-recruitment-task

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
raydium_parser/: raydium_parser.py  rpc_utils.py
template/: __main__.py
tests/: test_raydium_parser.py
